--- a/src/components/Paginate/paginate.module.css
+++ b/src/components/Paginate/paginate.module.css
@@ -7,11 +7,11 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.container-paginate {
+.containerPaginate {
   text-align: center;
 }
 
-.pag-prev {
+.pagPrev {
   background-color: hsl(51, 100%, 50%);
   border: none;
   font-family: "Bebas Neue";
@@ -22,7 +22,7 @@
   margin: 0 0.4rem;
 }
 
-.pag-next {
+.pagNext {
   background-color: hsl(51, 100%, 50%);
   border: none;
   color: rgb(19, 19, 19);
@@ -44,10 +44,6 @@
 }
 
 @media (max-width: 322px) {
-  /* .container-paginate {
-    margin: 0 -5rem;
-  } */
-
   .pageNumber {
     width: 60%;
     margin: 0.6rem -0.65rem;
@@ -59,7 +55,7 @@
   }
 }
 
-.container-paginate li {
+.containerPaginate li {
   margin: 0 0.5rem;
   cursor: pointer;
 }
