--- a/src/components/Recetas/recetas.module.css
+++ b/src/components/Recetas/recetas.module.css
@@ -1,4 +1,4 @@
-.container-cards {
+.containerCards {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -6,20 +6,20 @@
   max-width: 72%;
 }
 
-.container-error {
+.containerError {
   border: 1px solid hsl(51, 100%, 50%);
   width: 70%;
   margin-top: 5rem;
   margin-left: 23rem;
 }
 
-.text-error {
+.textError {
   width: 100%;
   text-align: center;
 }
 
 @media (max-width: 1500px) {
-    .container-cards {
+    .containerCards {
       margin: 0 auto;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
@@ -29,7 +29,7 @@
   }
   
   @media (max-width: 1250px) {
-    .container-cards {
+    .containerCards {
       margin: 0 auto;
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -39,7 +39,7 @@
   }
   
   @media (max-width: 960px) {
-    .container-cards {
+    .containerCards {
       margin: 0 auto;
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -49,7 +49,7 @@
   }
   
   @media (max-width: 720px) {
-    .container-cards {
+    .containerCards {
       margin: 0 auto;
       display: grid;
       grid-template-columns: 1fr;
